force-app/main/default/objects/HP_Vue_360_API__mdt/HP_Vue_360_API__mdt.object-meta.xml
<CustomObject>
    <label>HP Vue 360 API</label>
    <pluralLabel>HP Vues 360 API</pluralLabel>
</CustomObject>