force-app/main/default/objects/HP_Vue_360_API__mdt/fields/HP_Desactivate_Config__c.field-meta.xml
<CustomField>
    <fullName>HP_Desactivate_Config__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HP Desactivate Config</label>
    <type>Checkbox</type>
</CustomField>