force-app/main/default/objects/HP_Vue_360_API__mdt/fields/HP_Is_List__c.field-meta.xml
<CustomField>
    <fullName>HP_Is_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>s’il s’agit d’une liste ou non</description>
    <label>HP Is List</label>
    <type>Checkbox</type>
</CustomField>