force-app/main/default/objects/HP_Vue_360_API__mdt/fields/HP_Need_ContactId__c.field-meta.xml
<CustomField>
    <fullName>HP_Need_ContactId__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need ContactId</label>
    <type>Checkbox</type>
</CustomField>