force-app/main/default/objects/HP_Vue_360_API__mdt/fields/HP_Object_Result_Name__c.field-meta.xml
<CustomField>
    <fullName>HP_Object_Result_Name__c</fullName>
    <label>HP Object Result Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>