force-app/main/default/objects/HP_Vue_360_API__mdt/fields/HP_Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>HP_Parent_ID__c</fullName>
    <description>Id du parent</description>
    <label>HP Parent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>