force-app/main/default/objects/HP_Vue_360_API__mdt/fields/HP_Path_Field_Parent__c.field-meta.xml
<CustomField>
    <fullName>HP_Path_Field_Parent__c</fullName>
    <label>HP Path Field Parent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>