force-app/main/default/objects/HP_Vue_360_API__mdt/fields/HP_Precessing__c.field-meta.xml
<CustomField>
    <fullName>HP_Precessing__c</fullName>
    <label>HP Processing</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>