force-app/main/default/objects/HP_Vue_360_API__mdt/fields/HP_Prefix_Parameter_API__c.field-meta.xml
<CustomField>
    <fullName>HP_Prefix_Parameter_API__c</fullName>
    <description>dans la cadre d’un nœud API, le préfixe qu’on doit ajouter</description>
    <label>HP Prefix Parameter API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>