force-app/main/default/objects/HP_Vue_360_API__mdt/fields/HP_Type__c.field-meta.xml
<CustomField>
    <fullName>HP_Type__c</fullName>
    <description>le type de nœud (API, SOQL, APEX, Empty)</description>
    <label>HP  Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
                <default>true</default>
                <label>API</label>
            </value>
            <value>
                <fullName>SOQL</fullName>
            </value>
            <value>
                <fullName>APEX</fullName>
            </value>
            <value>
                <fullName>Empty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>