force-app/main/default/objects/HP_Vue_360_API__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>HP_Type__c</columns>
    <columns>HP_Precessing__c</columns>
    <columns>HP_Parent_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>